compute height in Javascript to avoid hovered image jumping

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -837,13 +837,6 @@ span.hide-announcement {
 .fileThumb > .warning {
   clear: both;
 }
-#ihover {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  max-height: 100%;
-  max-width: 75%;
-  padding-bottom: 16px;
-}
 /* Fappe Tyme */
 :root.fappeTyme .thread > .noFile,
 :root.fappeTyme .threadContainer > .noFile {
